# mlops

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
docs/: mkdocs.yaml
final_exercise/: data.py  main.py  model.pth  model.py
models/: model.pth
src/mlops_project/: data.py  evaluate.py  model.py  train.py  visualize.py
